--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mongoose": "^8.16.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "react": "^19.1.0",
